@@ -93,3 +93,5 @@ film.imagepipelines.0.1.value = 2.2
 ##
 #film.filter.type = SINC
 #film.filter.sinc.tau = 1
+##
+#film.filter.type = CATMULLROM
