@@ -1,0 +1,68 @@
+/***************************************************************************
+ * Copyright 1998-2020 by authors (see AUTHORS.txt)                        *
+ *                                                                         *
+ *   This file is part of LuxCoreRender.                                   *
+ *                                                                         *
+ * Licensed under the Apache License, Version 2.0 (the "License");         *
+ * you may not use this file except in compliance with the License.        *
+ * You may obtain a copy of the License at                                 *
+ *                                                                         *
+ *     http://www.apache.org/licenses/LICENSE-2.0                          *
+ *                                                                         *
+ * Unless required by applicable law or agreed to in writing, software     *
+ * distributed under the License is distributed on an "AS IS" BASIS,       *
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.*
+ * See the License for the specific language governing permissions and     *
+ * limitations under the License.                                          *
+ ***************************************************************************/
+
+#include "slg/film/filters/catmullrom.h"
+
+using namespace std;
+using namespace luxrays;
+using namespace slg;
+
+BOOST_CLASS_EXPORT_IMPLEMENT(slg::CatmullRomFilter)
+
+Properties CatmullRomFilter::ToProperties() const {
+	return Filter::ToProperties() <<
+			Property("film.filter.sinc.tau")(alpha);
+}
+
+//------------------------------------------------------------------------------
+// Static methods used by FilterRegistry
+//------------------------------------------------------------------------------
+
+Properties CatmullRomFilter::ToProperties(const Properties &cfg) {
+	return Properties() <<
+			cfg.Get(GetDefaultProps().Get("film.filter.type"));
+}
+
+Filter *CatmullRomFilter::FromProperties(const Properties &cfg) {
+	const float defaultFilterWidth = cfg.Get(GetDefaultProps().Get("film.filter.width")).Get<float>();
+	const float filterXWidth = cfg.Get(Property("film.filter.xwidth")(defaultFilterWidth)).Get<float>();
+	const float filterYWidth = cfg.Get(Property("film.filter.ywidth")(defaultFilterWidth)).Get<float>();
+
+	return new CatmullRomFilter(filterXWidth, filterYWidth);
+}
+
+slg::ocl::Filter *CatmullRomFilter::FromPropertiesOCL(const Properties &cfg) {
+	const float defaultFilterWidth = cfg.Get(GetDefaultProps().Get("film.filter.width")).Get<float>();
+	const float filterXWidth = cfg.Get(Property("film.filter.xwidth")(defaultFilterWidth)).Get<float>();
+	const float filterYWidth = cfg.Get(Property("film.filter.ywidth")(defaultFilterWidth)).Get<float>();
+
+	slg::ocl::Filter *oclFilter = new slg::ocl::Filter();
+
+	oclFilter->widthX = filterXWidth;
+	oclFilter->widthY = filterYWidth;
+
+	return oclFilter;
+}
+
+const Properties &CatmullRomFilter::GetDefaultProps() {
+	static Properties props = Properties() <<
+			Filter::GetDefaultProps() <<
+			Property("film.filter.type")(GetObjectTag());
+
+	return props;
+}
