@@ -10,6 +10,7 @@
 * Variance clamping is now applied separately to each radiance group (issue #414)
 * Added the support for lateral and longitudinal chromatic aberration (issue #409)
 * Added the support for SINC pixel filter (issue #415)
+* Added the support for CATMULLROM pixel filter (issue #415)
 
 ### Fixed Bugs
 
